applications/proxy/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-proxy
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8233
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mealie-proxy
subsets:
- addresses:
  - ip: 192.168.178.47
  ports:
  - name: app
    port: 8233
    protocol: TCP
