applications/proxy/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: mealie-ingress
spec:
  rules:
    - host: mealie.home.juli.sh
      http:
        paths:
          - backend:
              service:
                name: mealie-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mealie.home.juli.sh
      secretName: mealie-tls
